Fixed issue with header being clickable while still invisible. Fixed issue with slideshow

--- a/assets/css/slideshow.css
+++ b/assets/css/slideshow.css
@@ -76,7 +76,7 @@
 .carousel__nav {
   display: flex;
   justify-content: center;
-  /* padding: 20px 0; */
+  padding: 20px 0;
   gap: 1rem;
 }
 .carousel__indicator {
